--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.TurnOffActionBar">
-        <activity android:name=".HelpScreenActivity"></activity>
-        <activity android:name=".ActivityWeb2" />
-        <activity android:name=".ActivityWeb" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".ActivityUI.ResultActivity" />
+        <activity android:name=".ActivityUI.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
