--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.TurnOffActionBar">
+        <activity android:name=".DetailActivity" />
         <activity android:name=".ActivityUI.ResultActivity" />
         <activity android:name=".ActivityUI.MainActivity">
             <intent-filter>
